    more easily.
  * Use dh_installdocs to install documentation.
  * Remove unnecessary ${shlibs:Depends} dependencies.
  * Add debconffilter.py from oem-config (this has been sent to debconf
    upstream and may eventually make it in there instead). We'll use this
    for d-i integration.
  * Adjust debconffilter to filter out STOP.
  * Add generic error question handling to debconffilter.
  * Add debconfcommunicator.py too; it's been committed to debconf upstream,
    but it's useful here anyway for backports to breezy.
  * Refer to ubuntu.com everywhere, not the deprecated ubuntulinux.org.
  * Add archdetect compatibility shim, since lots of d-i programs need it.
  * Add apt-install compatibility shim.
  * Add rudimentary FilteredCommand class, a convenience wrapper around
    DebconfFilter that makes it easier to test various things.
  * Fix broken use of debhelper; the author seemed to be confusing -A and
    -a, and in any case we only build architecture-independent packages.
  * Don't use full-screen mode.
  * Use 'lsb_release -is' rather than reading /etc/lsb-release directly.
  * Depend on lsb-release.
  * Drop dependency on peez2. We don't have anything to replace it with yet
    (although we will), but depending on a nonexistent package makes
    development work too awkward.
  * Disable embedded web browser for now since this segfaults in current
    dapper (Bugzilla #20338).
  * Fix Config.get_locales() using DebconfCommunicator.
  * Call user-setup as a debconffilter coprocess while running the
    corresponding UI step, replacing our own duplicated validation code.
  * Use dh_install instead of verbose code in debian/rules (which includes a
    bashism anyway).
  * Remove hardcoded svn commands in generate-doc.sh.
  * Remove generated source code documentation for now; it's really not
    terribly useful, certainly not in the espresso binary package, and
    ultimately it should be generated as part of the build process if at
    all.
